# real-time-plot-sfml

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Grid.hpp  Grid2D.hpp  GridManager.hpp  Plot.hpp  Point.hpp
src/: Grid.cpp  Grid2D.cpp  GridManager.cpp  Plot.cpp  Point.cpp  main.cpp
